static/css/style.css
:root {
    /* fonts */
    --title: Oswald, serif;
    --main-font: Source Sans Pro, sans-serif;

    /* colors */
    --body: #D7CDCC;
    --navfooter: #034078;
    --font-color: #001F54;

    /* Utils */
    --smal-box-shadow: 1px -1px 7px 0 #00000061;
    --border: 1px solid #00000030;
}


/* Generic */

html,
body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    font-family: var(--main-font);
    color: var(--font-color);
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: var(--title);
}

main {
    flex: 1 0 auto;
    background-color: var(--body);
}

.active {
    font-weight: 700;
    border-bottom: 1px solid var(--body);

}


/* Header  */
.navbar {
    background-color: var(--navfooter);
    box-shadow: var(--smal-box-shadow);
}

a.nav-link {
    color: var(--body) !important;
    transition: all 0.3s ease;
}

a.nav-link:hover {
    transform: scale(1.1);
}

img.logo {
    width: 6rem;
    height: 6rem;
    border-radius: 50%;
}

.profile-img {
    width: 6rem;
    height: 6rem;
    border-radius: 5px;
}

.toggler-color {
    background-color: var(--body);
}

/* form */

.form {
    width: 100%;
    margin: 3% auto;
    box-shadow: var(--smal-box-shadow);
    border-radius: 5px;
}


/* index.html */

.page-intro {
    margin-top: 3rem;
    margin-bottom: 3rem;
    box-shadow: var(--smal-box-shadow);
    background-color: white;
    padding: 1.5rem;
    border-radius: 10px;
}

.postcard-content {
    text-decoration: none;
}

.home-intro-title {
    font-family: var(--title);
}


/* work display cards*/


.card-front-img {
    height: 15rem;
    object-fit: cover;
}

.card-content {
    text-align: left;
    overflow: hidden;
}


/* work_detail.html */
.rating {
    padding: 10px;
}

.faded {
    color: rgb(172, 175, 175);
}


/* profile.html */
.user-dash {
    margin-top: 5rem;
}


/* Footer */
footer {
    flex-shrink: 0;
    background-color: var(--navfooter);
    color: var(--body);
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-top: var(--border);
}

.social-icons {
    font-size: 1.5rem;
    margin: .5rem .5rem;
    transition: all 0.3s ease;
}

.social-icons:hover {
    transform: scale(1.1);
}

a.footer-links {
    color: var(--body);
}

